syntax = "proto3";
option java_package = "s4y.waytoday.grpc";
package grpc;
import "location.proto";

service Tracker {
    rpc Ping (PingRequest) returns (PongResponse) {
    }
    rpc AddLocations (AddLocationsRequest) returns (AddLocationResponse) {
    }
    rpc GetLocations (GetLocationsRequest) returns (grpc.Locations) {
    }
    rpc GenerateTrackerID (GenerateTrackerIDRequest) returns (GenerateTrackerIDResponse) {
    }
    rpc TestTrackerID (TestTrackerIDRequest) returns (TestTrackerIDResponse) {
    }
    rpc FreeTrackerID (FreeTrackerIDRequest) returns (FreeTrackerIDResponse) {
    }
}

message PingRequest {
    string payload = 1;
}

message PongResponse {
    string payload = 1;
}

message AddLocationsRequest {
    string tid = 1;
    repeated grpc.Location locations = 2;
}


message AddLocationResponse {
    bool ok = 1;
}

message GetLocationsRequest {
    string tid = 1;
    int32 limit = 2;
}

message GenerateTrackerIDRequest {
    string prev_tid = 1;
}

message GenerateTrackerIDResponse {
    string tid = 1;
}

message TestTrackerIDRequest {
    string tid = 1;
}

message TestTrackerIDResponse {
    bool ok = 1;
}

message FreeTrackerIDRequest {
    string tid = 1;
}

message FreeTrackerIDResponse {
    bool ok = 1;
}

